kubeonprem/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: xpapibackend
  name: xpapibackend
  namespace: capps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: xpapibackend
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: xpapibackend
        deployment: xpapibackend
    spec:
      containers:
      - image: docker.io/nutkondee/xpapibackend:v1
        imagePullPolicy: IfNotPresent
        name: xpapibackend
        ports:
        - containerPort: 1337
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
