kubeonprem/services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: xpapibackend
  name: xpapibackend
  namespace: capps
spec:
  ports:
  - name: 1337-tcp
    port: 1337
    protocol: TCP
    targetPort: 1337
  selector:
    app: xpapibackend
    deployment: xpapibackend
  type: ClusterIP
